--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,9 +10,10 @@ license = "Apache-2.0 OR MIT"
 futures-util = "0.3"
 im = "15.1.0"
 modular-agent-kit = "0.21.0"
+rustls = { version = "0.23", default-features = false, features = ["ring", "std"] }
 serde = { version = "1", features = ["derive"] }
 serde_json = "1"
-slack-morphism = { version = "2", default-features = false, features = ["hyper"] }
+slack-morphism = { version = "2", features = ["hyper"] }
 tokio = { version = "1", features = ["sync", "rt"] }
 
 [features]
