--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,6 +15,7 @@ serde = { version = "1", features = ["derive"] }
 serde_json = "1"
 slack-morphism = { version = "2", features = ["hyper"] }
 tokio = { version = "1", features = ["sync", "rt"] }
+tracing = "0.1"
 
 [features]
 default = ["image"]
