--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 name = "modular-agent-slack"
-version = "0.1.0"
-description = "Slack Agents for Modular Agent Kit"
+version = "0.2.0"
+description = "Slack Agents for Modular Agent"
 authors = ["Akira Ishino <akira@lumilab.jp>"]
 edition = "2024"
 license = "Apache-2.0 OR MIT"
@@ -9,7 +9,6 @@ license = "Apache-2.0 OR MIT"
 [dependencies]
 futures-util = "0.3"
 im = "15.1.0"
-modular-agent-kit = "0.21.0"
 rustls = { version = "0.23", default-features = false, features = ["ring", "std"] }
 serde = { version = "1", features = ["derive"] }
 serde_json = "1"
@@ -17,9 +16,11 @@ slack-morphism = { version = "2", features = ["hyper"] }
 tokio = { version = "1", features = ["sync", "rt"] }
 tracing = "0.1"
 
+modular-agent-core = "0.22.0"
+
 [features]
 default = ["image"]
 image = []
 
 # [patch.crates-io]
-# modular-agent-kit = { path = "../modular-agent-kit/modular-agent-kit" }
+# modular-agent-core = { path = "../modular-agent-core/modular-agent-core" }
