--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,8 +7,10 @@ edition = "2024"
 license = "Apache-2.0 OR MIT"
 
 [dependencies]
+chrono = "0.4"
 futures-util = "0.3"
 im = "15.1.0"
+photon-rs = { version = "0.3", optional = true }
 rustls = { version = "0.23", default-features = false, features = ["ring", "std"] }
 serde = { version = "1", features = ["derive"] }
 serde_json = "1"
@@ -20,7 +22,7 @@ modular-agent-core = "0.22.0"
 
 [features]
 default = ["image"]
-image = []
+image = ["modular-agent-core/image", "photon-rs"]
 
 # [patch.crates-io]
 # modular-agent-core = { path = "../modular-agent-core/modular-agent-core" }
