--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,12 +15,13 @@ serde_json = "1"
 slack-morphism = { version = "2", features = ["hyper"] }
 tokio = { version = "1", features = ["sync", "rt"] }
 tracing = "0.1"
+reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"], optional = true}
 
 modular-agent-core = "0.22.0"
 
 [features]
 default = ["image"]
-image = ["modular-agent-core/image"]
+image = ["modular-agent-core/image", "reqwest"]
 
 # [patch.crates-io]
 # modular-agent-core = { path = "../modular-agent-core/modular-agent-core" }
